--- a/android/wolfssljni-ndk-gradle/app/src/main/res/layout/activity_main.xml
+++ b/android/wolfssljni-ndk-gradle/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="bottom"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/displayText"
             android:layout_width="match_parent"
-            android:layout_height="532dp"
-            android:layout_marginTop="10dp" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1" />
 
         <View
             android:id="@+id/divider"
